Добавил предложения инвестирования. Админку для предложений инвестирования. Разделил панель управления и панель администрирования

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -1,6 +1,11 @@
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
 
+rewrite ^/control-panel$ /control-panel/ permanent;
+rewrite ^/control-panel/$ /index.php?area=controlPanel last;
+rewrite ^/control-panel/admin$ /control-panel/admin/ permanent;
+rewrite ^/control-panel/admin/$ /index.php?area=adminPanel last;
+
 rewrite ^/control-panel/admin/acl-action$ /control-panel/admin/acl-action/ permanent;
 rewrite ^/control-panel/admin/acl-action/$ /index.php?area=aclActionList last;
 rewrite ^/control-panel/admin/acl-action/([a-z]+).html$ /index.php?area=aclActionEditor&action=$1 last;
@@ -13,5 +18,12 @@ rewrite ^/control-panel/admin/acl-right/([a-z]+).html$ /index.php?area=aclRightE
 rewrite ^/control-panel/admin/acl-group$ /control-panel/admin/acl-group/ permanent;
 rewrite ^/control-panel/admin/acl-group/$ /index.php?area=aclGroupList last;
 rewrite ^/control-panel/admin/acl-group/([a-z]+).html$ /index.php?area=aclGroupEditor&action=$1 last;
+
+rewrite ^/control-panel/admin/invest-offer$ /control-panel/admin/invest-offer/ permanent;
+rewrite ^/control-panel/admin/invest-offer/$ /index.php?area=adminInvestorOfferList last;
+
+rewrite ^/control-panel/invest-offer$ /control-panel/invest-offer/ permanent;
+rewrite ^/control-panel/invest-offer/$ /index.php?area=investorOfferList last;
+rewrite ^/control-panel/invest-offer/([a-z]+).html$ /index.php?area=investorOfferEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
