Добавил категории для объявлений и админку для них

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -1,3 +1,4 @@
+rewrite ^/ajax/category-sort.json$ /index.php?area=ajaxCategorySort last;
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
 
@@ -21,6 +22,10 @@ rewrite ^/control-panel/admin/acl-group/([a-z]+).html$ /index.php?area=aclGroupE
 
 rewrite ^/control-panel/admin/invest-offer$ /control-panel/admin/invest-offer/ permanent;
 rewrite ^/control-panel/admin/invest-offer/$ /index.php?area=adminInvestorOfferList last;
+
+rewrite ^/control-panel/admin/category$ /control-panel/admin/category/ permanent;
+rewrite ^/control-panel/admin/category/$ /index.php?area=adminCategoryList last;
+rewrite ^/control-panel/admin/category/([a-z]+).html$ /index.php?area=adminCategoryEditor&action=$1 last;
 
 rewrite ^/control-panel/invest-offer$ /control-panel/invest-offer/ permanent;
 rewrite ^/control-panel/invest-offer/$ /index.php?area=investorOfferList last;
