Добавил в админку просмотр списка пользователей и редактирование

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -27,6 +27,10 @@ rewrite ^/control-panel/admin/category$ /control-panel/admin/category/ permanent
 rewrite ^/control-panel/admin/category/$ /index.php?area=adminCategoryList last;
 rewrite ^/control-panel/admin/category/([a-z]+).html$ /index.php?area=adminCategoryEditor&action=$1 last;
 
+rewrite ^/control-panel/admin/user$ /control-panel/admin/user/ permanent;
+rewrite ^/control-panel/admin/user/$ /index.php?area=adminUserList last;
+rewrite ^/control-panel/admin/user/([a-z]+).html$ /index.php?area=adminUserEditor&action=$1 last;
+
 rewrite ^/control-panel/invest-offer$ /control-panel/invest-offer/ permanent;
 rewrite ^/control-panel/invest-offer/$ /index.php?area=investorOfferList last;
 rewrite ^/control-panel/invest-offer/([a-z]+).html$ /index.php?area=investorOfferEditor&action=$1 last;
