Добавил сущность, редактор и админку Компании Кредитора

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -23,6 +23,9 @@ rewrite ^/control-panel/admin/acl-group/([a-z]+).html$ /index.php?area=aclGroupE
 rewrite ^/control-panel/admin/invest-offer$ /control-panel/admin/invest-offer/ permanent;
 rewrite ^/control-panel/admin/invest-offer/$ /index.php?area=adminInvestorOfferList last;
 
+rewrite ^/control-panel/admin/creditor$ /control-panel/admin/creditor/ permanent;
+rewrite ^/control-panel/admin/creditor/$ /index.php?area=adminCreditorList last;
+
 rewrite ^/control-panel/admin/category$ /control-panel/admin/category/ permanent;
 rewrite ^/control-panel/admin/category/$ /index.php?area=adminCategoryList last;
 rewrite ^/control-panel/admin/category/([a-z]+).html$ /index.php?area=adminCategoryEditor&action=$1 last;
@@ -34,5 +37,9 @@ rewrite ^/control-panel/admin/user/([a-z]+).html$ /index.php?area=adminUserEdito
 rewrite ^/control-panel/invest-offer$ /control-panel/invest-offer/ permanent;
 rewrite ^/control-panel/invest-offer/$ /index.php?area=investorOfferList last;
 rewrite ^/control-panel/invest-offer/([a-z]+).html$ /index.php?area=investorOfferEditor&action=$1 last;
+
+rewrite ^/control-panel/creditor$ /control-panel/creditor/ permanent;
+rewrite ^/control-panel/creditor/$ /index.php?area=creditorList last;
+rewrite ^/control-panel/creditor/([a-z]+).html$ /index.php?area=creditorEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
