--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -1,5 +1,8 @@
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
+rewrite ^/ajax/credit-request-code.json$ /index.php?area=ajaxCreditRequestCode last;
+rewrite ^/ajax/credit-request-name.json$ /index.php?area=ajaxCreditRequestName last;
+rewrite ^/ajax/credit-request-ogrn.json$ /index.php?area=ajaxCreditRequestOgrn last;
 
 rewrite ^/cabinet$ /cabinet/ permanent;
 rewrite ^/cabinet/$ /index.php?area=controlPanel last;
