--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -4,7 +4,8 @@ rewrite ^/ajax/credit-request-code.json$ /index.php?area=ajaxCreditRequestCode l
 rewrite ^/ajax/credit-request-name.json$ /index.php?area=ajaxCreditRequestName last;
 rewrite ^/ajax/credit-request-ogrn.json$ /index.php?area=ajaxCreditRequestOgrn last;
 
-rewrite ^/cabinet$ /cabinet/ permanent;
+rewrite ^/cabinet(/my/?)?$ /cabinet/ permanent;
 rewrite ^/cabinet/$ /index.php?area=controlPanel last;
+rewrite ^/cabinet/my/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
