--- a/nginx_invest_rewrites.conf
+++ b/nginx_invest_rewrites.conf
@@ -1,7 +1,7 @@
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
 
-rewrite ^/cabinet(/my/?)$ /cabinet/ permanent;
+rewrite ^/cabinet(/my/?)?$ /cabinet/ permanent;
 rewrite ^/cabinet/$ /index.php?area=controlPanel last;
 #rewrite ^/cabinet/my$ /cabinet/my/ permanent;
 #rewrite ^/cabinet/my/$ /index.php?area=investorOfferList last;
