Доделал полный цикл прохождения запроса от заемщика

--- a/nginx_admin_rewrites.conf
+++ b/nginx_admin_rewrites.conf
@@ -36,7 +36,9 @@ rewrite ^/invest-offer/$ /index.php?area=investorOfferList last;
 rewrite ^/invest-offer/([a-z]+).html$ /index.php?area=investorOfferEditor&action=$1 last;
 
 rewrite ^/credit-request$ /credit-request/ permanent;
+rewrite ^/credit-request/offer/?$ /credit-request/ permanent;
 rewrite ^/credit-request/$ /index.php?area=creditRequestList last;
 rewrite ^/credit-request/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$1 last;
+rewrite ^/credit-request/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorOfferEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
