--- a/nginx_credit_rewrites.conf
+++ b/nginx_credit_rewrites.conf
@@ -11,4 +11,10 @@ rewrite ^/cabinet/$ /index.php?area=controlPanel last;
 #rewrite ^/cabinet/my/$ /index.php?area=creditorList last;
 rewrite ^/cabinet/my/([a-z]+).html$ /index.php?area=creditorEditor&action=$1 last;
 
+rewrite ^/cabinet/credit-request$ /cobinet/credit-request/ permanent;
+rewrite ^/cabinet/credit-request/offer/?$ /cabinet/credit-request/ permanent;
+rewrite ^/cabinet/credit-request/$ /index.php?area=creditRequestList last;
+rewrite ^/cabinet/credit-request/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$1 last;
+rewrite ^/cabinet/credit-request/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorOfferEditor&action=$1 last;
+
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
