--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -9,7 +9,9 @@ rewrite ^/ajax/photo-delete.json$ /index.php?area=ajaxPhotoDelete last;
 rewrite ^/ajax/photo-rotate.json$ /index.php?area=ajaxPhotoRotate last;
 
 rewrite ^/cabinet(/my/?)?$ /cabinet/ permanent;
+rewrite ^/cabinet/my/offer/?$ /cabinet/ permanent;
 rewrite ^/cabinet/$ /index.php?area=controlPanel last;
 rewrite ^/cabinet/my/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$1 last;
+rewrite ^/cabinet/my/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorOfferEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
