Доработки по пользовательскому сайту последние. Пока без дизайна

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -15,3 +15,5 @@ rewrite ^/cabinet/my/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$
 rewrite ^/cabinet/my/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorOfferEditor&action=$1 last;
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
+
+rewrite ^/static/([a-z\-]+).html$ /index.php?area=staticPage&content=$1 last;
