--- a/nginx_invest_rewrites.conf
+++ b/nginx_invest_rewrites.conf
@@ -11,4 +11,9 @@ rewrite ^/cabinet/$ /index.php?area=controlPanel last;
 #rewrite ^/cabinet/my/$ /index.php?area=investorOfferList last;
 rewrite ^/cabinet/my/([a-z]+).html$ /index.php?area=investorOfferEditor&action=$1 last;
 
+rewrite ^/cabinet/invest-request(/offer/?)?$ /cabinet/invest-request/ permanent;
+rewrite ^/cabinet/invest-request/$ /index.php?area=creditRequestList last;
+#rewrite ^/cabinet/invest-request/([a-z]+).html$ /index.php?area=creditRequestEditor&action=$1 last;
+#rewrite ^/cabinet/invest-request/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorOfferEditor&action=$1 last;
+
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
