--- a/nginx_admin_rewrites.conf
+++ b/nginx_admin_rewrites.conf
@@ -1,6 +1,7 @@
 rewrite ^/ajax/category-sort.json$ /index.php?area=ajaxCategorySort last;
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
+rewrite ^/ajax/user-name.json$ /index.php?area=ajaxUserName last;
 rewrite ^/ajax/photo-upload.json$ /index.php?area=ajaxPhotoUpload last;
 rewrite ^/ajax/photo-sort.json$ /index.php?area=ajaxPhotoSort last;
 rewrite ^/ajax/photo-delete.json$ /index.php?area=ajaxPhotoDelete last;
