--- a/nginx_invest_rewrites.conf
+++ b/nginx_invest_rewrites.conf
@@ -1,5 +1,6 @@
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
+rewrite ^/ajax/user-name.json$ /index.php?area=ajaxUserName last;
 rewrite ^/ajax/photo-upload.json$ /index.php?area=ajaxPhotoUpload last;
 rewrite ^/ajax/photo-sort.json$ /index.php?area=ajaxPhotoSort last;
 rewrite ^/ajax/photo-delete.json$ /index.php?area=ajaxPhotoDelete last;
