--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -1,8 +1,8 @@
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
+rewrite ^/ajax/user-name.json$ /index.php?area=ajaxUserName last;
 rewrite ^/ajax/credit-request-code.json$ /index.php?area=ajaxCreditRequestCode last;
 rewrite ^/ajax/credit-request-name.json$ /index.php?area=ajaxCreditRequestName last;
-rewrite ^/ajax/credit-request-ogrn.json$ /index.php?area=ajaxCreditRequestOgrn last;
 rewrite ^/ajax/photo-upload.json$ /index.php?area=ajaxPhotoUpload last;
 rewrite ^/ajax/photo-sort.json$ /index.php?area=ajaxPhotoSort last;
 rewrite ^/ajax/photo-delete.json$ /index.php?area=ajaxPhotoDelete last;
