Добавил подсказки по адресам. На странице назначения встречи для адреса сделал подсказки по адресу

--- a/nginx_admin_rewrites.conf
+++ b/nginx_admin_rewrites.conf
@@ -1,3 +1,4 @@
+rewrite ^/ajax/address.json$ /index.php?area=ajaxAddress last;
 rewrite ^/ajax/category-sort.json$ /index.php?area=ajaxCategorySort last;
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
