--- a/nginx_invest_rewrites.conf
+++ b/nginx_invest_rewrites.conf
@@ -1,3 +1,4 @@
+rewrite ^/ajax/address.json$ /index.php?area=ajaxAddress last;
 rewrite ^/ajax/user-register-code.json$ /index.php?area=ajaxUserRegisterCode last;
 rewrite ^/ajax/user-confirm-code.json$ /index.php?area=ajaxUserConfirmCode last;
 rewrite ^/ajax/user-name.json$ /index.php?area=ajaxUserName last;
