Добавил страницу отдельную с кредитом под залог авто. В HEAD добавил DESCRIPTION Добавил переадресацию со /static/ на главную

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -17,4 +17,5 @@ rewrite ^/cabinet/my/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorO
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
 
+rewrite ^/static/?$ / permanent;
 rewrite ^/static/([a-z\-]+).html$ /index.php?area=staticPage&content=$1 last;
