Добавил composer. Подключил через composer и deploy.sh - jQuery, jQueryUI, BootstrapSelect

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ src/classes/Proto/ProtoMeditation.class.php
 src/user/www/AAGEjb0nX7WOtjyQ3NWmrcM14Cw8Sh9TU-bitcoin.php
 src/user/www/AAGEjb0nX7WOtjyQ3NWmrcM14Cw8Sh9TU-meditation.php
 src/user/www/bot-366545092:AAHcMTR1zugJYVTh_Vb9TYp4Q4cLIyAdN2Q-hook.php
+/vendor/
