--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -18,4 +18,4 @@ rewrite ^/cabinet/my/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorO
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
 
 rewrite ^/static/?$ / permanent;
-rewrite ^/static/([a-z\-]+).html$ /index.php?area=staticPage&content=$1 last;
+rewrite ^/(static|service)/([a-z\-]+).html$ /index.php?area=$1Page&content=$2 last;
