Добавил отображение новости, списка новостей и блок с последними новостями

--- a/nginx_rewrites.conf
+++ b/nginx_rewrites.conf
@@ -17,5 +17,9 @@ rewrite ^/cabinet/my/offer/([a-z]+).html$ /index.php?area=creditRequestCreditorO
 
 rewrite ^/user/([a-z]+).html$ /index.php?area=userRegister&action=$1 last;
 
+rewrite ^/news$ /news/ permanent;
+rewrite ^/news/$ /index.php?area=newsList last;
+rewrite ^/news/([a-z0-9\-]+).html$ /index.php?area=newsItem&sid=$1 last;
+
 rewrite ^/static/?$ / permanent;
 rewrite ^/(static|service)/([a-z\-]+).html$ /index.php?area=$1Page&content=$2 last;
