--- a/nginx_admin_rewrites.conf
+++ b/nginx_admin_rewrites.conf
@@ -7,6 +7,8 @@ rewrite ^/ajax/photo-upload.json$ /index.php?area=ajaxPhotoUpload last;
 rewrite ^/ajax/photo-sort.json$ /index.php?area=ajaxPhotoSort last;
 rewrite ^/ajax/photo-delete.json$ /index.php?area=ajaxPhotoDelete last;
 rewrite ^/ajax/photo-rotate.json$ /index.php?area=ajaxPhotoRotate last;
+rewrite ^/ajax/preview-upload.json$ /index.php?area=ajaxPreviewUpload last;
+rewrite ^/ajax/preview-delete.json$ /index.php?area=ajaxPreviewDelete last;
 
 rewrite ^/acl-action$ /acl-action/ permanent;
 rewrite ^/acl-action/$ /index.php?area=aclActionList last;
